<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MovieSerfer</string>
    <string name="title_popular">Popular</string>
    <string name="title_top">Top</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="poster">Movie Poster</string>
    <string name="movie">Movie</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_rating">Rating</string>
    <string name="movie_popularity">Popularity</string>
    <string name="movie_release_date">Release Date</string>
    <string name="movie_revenue">Revenue</string>
    <string name="movie_overview">Overview</string>
    <string name="movie_genre">Genre</string>
    <string name="movie_status">Status</string>
    <string name="movie_tagline">Tagline</string>
</resources>