<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_top">

    <fragment
        android:id="@+id/navigation_popular"
        android:name="com.goodmit.movieserfer.presentation.ui.popular.PopularFragment"
        android:label="@string/title_popular"
        tools:layout="@layout/fragment_popular" />

    <fragment
        android:id="@+id/navigation_top"
        android:name="com.goodmit.movieserfer.presentation.ui.top.TopFragment"
        android:label="@string/title_top"
        tools:layout="@layout/fragment_top" />

    <fragment
        android:id="@+id/navigation_incoming"
        android:name="com.goodmit.movieserfer.presentation.ui.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" />
</navigation>